Fixed scaling issues on mobile.

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
   background-repeat: no-repeat;
   filter: brightness(0.85);
   z-index: -10;
+  overflow: hidden;
 }
 
 nav {
@@ -123,7 +124,7 @@ nav a:hover {
   justify-content: center;
   width: 100%;
   text-align: center;
-  font-size: 10vw;
+  font-size: max(10vw, 5vh);
 }
 
 .skills h2,
@@ -244,7 +245,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: start;
-  gap: 1vw;
+  gap: max(1vw, 1vh);
 }
 
 .connection:hover a {
@@ -302,5 +303,12 @@ h2 {
   }
   .home p {
     font-size: 5vw;
+  }
+  .background {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
   }
 }
